Adapt to 1.16 minecraft and naming, and java 8